--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/gfg
 spring.datasource.username=devenv01
 spring.datasource.password=Unix11!
+
+server.port= 8081
