--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/gfg
 spring.datasource.username=devenv01
 spring.datasource.password=Unix11!
 
 server.port= 8081
+
+#logging.level.root=DEBUG
