--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.password=Unix11!
 
 server.port= 8081
 
-#logging.level.root=DEBUG
+logging.level.root=DEBUG
+
+spring.jpa.show-sql=true
